--- a/README
+++ b/README
@@ -4,3 +4,5 @@ Minecraft Python Bot
 ------------------------
 
 MiPyBot is a Minecraft (1.3, not the beta or alpha) bot written in Python 3
+
+This project is licensed under the GNU GPL version 3. You can find a copy of the license in COPYING
