-Updated Minecraft version to 1.4.6 -Implemented plugin system -Added a simple automatic respawn plugin -Updated Yapsy to 1.10 -New option to enable/disable encryption (skip encryption and send 0xCD) -Implemented a Minecraft clock that emits a signal every 1/20th of a second

--- a/README
+++ b/README
@@ -3,13 +3,14 @@ MiPyBot
 MInecraft PYthon roBOT
 ------------------------
 
-MiPyBot is a Minecraft (1.4, not the beta or alpha) bot written in Python 3
+MiPyBot is a Minecraft bot written in Python 3
+
+Currently supported Minecraft version: 1.4.6
 
 This project is licensed under the GNU GPL version 3. You can find a copy of the license in COPYING
 
 Yapsy:
-MiPyBot uses Yapsy for its plugin system.
+MiPyBot uses Yapsy for its plugin system (version 1.10)
 You can find the Yapsy license in yapsy_LICENSE
 Project page: http://sourceforge.net/projects/yapsy/
-Original source code: http://sourceforge.net/projects/yapsy/files/Yapsy-1.9.2/Yapsy-1.9.2-python3.tar.gz
 Documentation: http://yapsy.sourceforge.net/index.html
